Links: artwork, show on hover, clipping fix [#3990558, #4004722, #3990878]

--- a/web/static/theme/theme-designer.less
+++ b/web/static/theme/theme-designer.less
@@ -76,7 +76,7 @@
 
 .hover-panel {
     position: absolute;
-    z-index: 9999;
+    z-index: 8000;
 
     .handle, .resizing-handle {
         box-sizing: content-box;
@@ -1222,4 +1222,5 @@ table.jPicker {
     top: 0px;
     right: 0px;
     bottom: 0px;
+    z-index: 7000;
 }
